# lemur

./: .gitignore  LICENSE  Makefile  README.md
lemur-py/: README.md  api.md  cli.py  codec.py  hvc.py  kots.py  lemur.py  profiles.py  requirements.txt  ring.py  sample.py  test_proj_norm.py  usage.md
lemur-rs/: Cargo.toml  README.md  gen_tables.py
lemur-rs/src/: aux_ntt.rs  codec.rs  error.rs  hvc.rs  kots.rs  lemur.rs  lib.rs  main.rs  materialized.rs  ntt.rs  params.rs  poly.rs  profile.rs  sample.rs  tables_d256_k4.rs
lemur-rs/tests/: bds_stateful.rs  gauss_ctx.rs  materialized_tree.rs  profile_pipeline.rs  proj_norm.rs  robustness.rs
parameter/: .gitignore  Lemur-DGS-Prec_TailCut.py  README.md  chipmunk_original.sage  chipmunk_original_security_summary.txt  chipmunk_param.sage  chipmunk_summary.txt  lemur_param.sage  rice_sizes.py  summary.txt
parameter/alpha/: alpha.sage
parameter/estimator/: UPSTREAM.md
parameter/msis_estimator/: MSIS_security.py  MSIS_security_optimized.py  UPSTREAM.md  model_BKZ.py
