[package]
name = "lemur-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lemur"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "bench_breakdown"
path = "src/bin/bench_breakdown.rs"

[[bin]]
name = "bench_verify"
path = "src/bin/bench_verify.rs"


[dependencies]
sha3 = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
thiserror = "1"
rayon = "1.10"

[profile.release]
opt-level = 3
